# aiida-openbis

./: .gitignore  .style.yapf  README.md  create_analysis.ipynb  create_drafts.ipynb  create_results.ipynb  docker-compose.yaml  home.ipynb  import_export_simulations.ipynb  list_working.txt  openbis_chatbot.ipynb  sample_measurement.ipynb  sample_preparation.ipynb  setup.cfg  setup.json  setup.py  setup_chatbot.ipynb  start.py  tip_preparation.ipynb  upload_substances.ipynb
Demo_Web_Apps/: demo.py
MacOS/: ReadMe.txt  docker-compose.yaml  nginx.conf
Notebooks/: BIS_Molecules.ipynb  Lab205_openBIS_objects.ipynb  collections_config.json  collections_info.json  creating-data-architecture.ipynb  creating-data-architecture.py  data-architecture.yml  example.json  exercise.ipynb  import_crystals_to_openBIS.ipynb  import_images_to_openbis.ipynb  import_layered2dmaterials_to_openbis.ipynb  import_molecules_to_openBIS.ipynb  logbook_openbis.txt  object_types-Copy1.yml  object_types.yml  objects.yml  openBIS_GUI.ipynb  questions_openbis.txt  reaction2bis.ipynb  requirements.txt  scanning_object_types.py  setup_openbis.ipynb  setup_openbis_using_json_schema.ipynb  setup_openbis_using_linkml.ipynb  setup_openbis_using_linkml.py  utils.py  validate_json_using_json_schemas.ipynb  validate_jsonld_using_json_schemas.ipynb
Python_Scripts/: 013a.cdxml  convert_cdxml_to_smiles.py  create_new_objects.py  exploring_openbis_software.ipynb  exploring_pybis_interface.py  how_to_correct_pybis_for_download.txt  interface_python_openbis.py  load_molecules_openbis.yml  load_objects_aiida_to_openbis.ipynb  molecule_object.yml  molecule_product_object.yml  openBIS_schema.json  openbis_schema.yml  preprint_object.yml  publication_object.yml  save_openbis_schema.ipynb  show_object_graphs.py  test.cdxml  utils.py
ai_agent/: openbis_utils.py  single_agent.py  test_tools.ipynb  tools.py
aiida_openbis/: openbis_data_objects.yml  utils.py
chroma_db/: chroma.sqlite3
config/: collections_config.json  config.json
data/: img_0001.sxm  img_0027.sxm  img_0068.sxm  logging.json  measurements_uploader.py
deprecated/: ai_agent.py  annealing.ipynb  app_widgets.py  calibration_optimisation.ipynb  (+31 more)
(+859 files in other folders)
