[metadata]
name = datarecords
version = 0.1.0a0
description = Data records registry app
long_description = file: README.md
long_description_content_type = text/markdown
author = Fabio Lopes
author_email = fabio.lopes@empa.ch
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker =
    Documentation =
    Logo = https://raw.githubusercontent.com/nanotech-empa/aiidalab-records-app/main/logo.jpg

[options]
python_requires = >=3.8

[aiidalab]
title = nanotech@openbis

[flake8]
ignore =
    E501
    W503
    E203

[bumpver]
current_version = "v0.1.0a0"
version_pattern = "v0Y.0M.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    current_version = "{version}"
    version = {pep440_version}
