[metadata]
name = aiida-openbis
version = 0.1.0
description = Tool to connect AiiDAlab with openBIS
long_description = file: README.md
long_description_content_type = text/markdown
author = Fabio Lopes, Carlo Pignedoli, Aliaksandr Yakutovich
author_email = fabio.lopes@empa.ch
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
project_urls =
    Bug Tracker =
    Documentation =
    Logo = https://github.com/nanotech-empa/aiida-openbis/blob/prepare-interface-to-install/aiidalab_openbis_logo.jpg

[options]
python_requires = >=3.9

[aiidalab]
title = nanotech@openbis

[flake8]
ignore =
    E501
    W503
    E203

[bumpver]
current_version = "v0.1.0"
version_pattern = "v0Y.0M.PATCH[PYTAGNUM]"
commit_message = "Bump version {old_version} -> {new_version}"
commit = True
tag = True
push = True

[bumpver:file_patterns]
setup.cfg =
    current_version = "{version}"
    version = {pep440_version}
